[package]
name = "test-website"
version = "0.1.0"
authors = ["N9199 <N9199@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = {versopm = "0.20", features = ["csr"]}
reqwasm = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.4"
itertools = "0.10.1"
wasm-timer = "0.2.5"
strum = { version = "0.23", features = ["derive"] }
gloo-timers = "0.3.0"
gloo-console = "0.3.0"
web-sys = { version = "0.3.64", features = ["Event", "EventTarget"] }
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
